# poetry-pybind11

./: .gitmodules  README.md  build.py  pyproject.toml
mypybind11lib/: CMakeLists.txt  main.cpp
poetry_pybind11/: __main__.py
