[tool.poetry]
name = "poetry-pybind11"
version = "0.1.0"
description = ""
authors = ["EndoYuuki <shuckle.rbtech@gmail.com>"]
readme = "README.md"


[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
